# wings

./: .gitignore  CHANGELOG.md  DOCUMENTATION.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  Usage_Example.txt  pyproject.toml
.github/workflows/: publish.yml
Examples/: 01_quickstart.ipynb  02_gpu_benchmarking.ipynb  03_advanced_targets.ipynb  04_production_campaign.ipynb  05_full_pipeline.ipynb
src/wings/: __init__.py  adam.py  ansatz.py  benchmarks.py  campaign.py  cli.py  compat.py  config.py  convenience.py  export.py  optimizer.py  paths.py  results.py  types.py
src/wings/evaluators/: __init__.py  cpu.py  custatevec.py  gpu.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_ansatz.py  test_campaign.py  test_config.py  test_evaluators.py  test_export.py  test_optimizer.py
